# Recommendation-API

./: .env.example  .gitignore  README.md  docker-compose.yml
LSH_Rust/: Cargo.toml
Python_Embedder/: Dockerfile  requirements.txt  test_vectors.json
Python_Embedder/src/: generate_embeddings.py  main.py
Python_Embedder/src/api/: embeddings.py
Python_Embedder/src/core/: redis_client.py
Python_Embedder/src/services/: embedding_service.py
Rust_LSH/: Cargo.toml  Dockerfile  test_vectors.json
Rust_LSH/src/: main.rs
Rust_LSH/src/errors/: api_error.rs  mod.rs
Rust_LSH/src/handlers/: healthcheck.rs  kv_handlers.rs  lsh_handler.rs  mod.rs
Rust_LSH/src/models/: kv.rs  lsh_vector.rs  mod.rs
Rust_LSH/src/routes/: healthcheck.rs  kv_routes.rs  lsh_routes.rs  mod.rs
Rust_LSH/src/services/: lsh_service.rs  mod.rs  redis_service.rs
dev_scripts/redis_content/: print_content.py
nginx/: nginx.conf
python/data/: posts.txt
