[package]
name = "LSH_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
colored = "3.0.0"
dotenv = "0.15.0"
lsh-rs = { git = "https://github.com/ritchie46/lsh-rs.git", branch = "master" }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = "1.0.219"
thiserror = "2.0.12"
